samples/_failures_safe/1761365731_f92c5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da17b4c6.c: In function ‘main’:
./samples/SAFE/__tmp_da17b4c6.c:145:5: error: expected identifier or ‘(’ at end of input
  145 |     size_t
      |     ^~~~~~
./samples/SAFE/__tmp_da17b4c6.c:145:5: error: expected declaration or statement at end of input
